--- a/csvcompare/csvcompare-war/pom.xml
+++ b/csvcompare/csvcompare-war/pom.xml
@@ -37,11 +37,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
+        <!--dependency>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-        </dependency>
+            <version>2.6</version>
+        </dependency-->
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
